/*
 * $Id: Changelog,v 1.28 2004/02/07 16:03:12 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-23 11:05 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
  * Rules.make
    + added support for building under OS/2 with GCC (I hope I did not break anything else)
    + inserted TABs between target and rule to make target since this is requested by gnu-make
  * tiputils.c
    * fixed to work under OS/2 GCC
    contrib/tip can now be built under OS/2 GCC and tests work ok (I could download a web
    page and a mail using tiptest).

2004-02-07 17:05 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * Rules.make
    + Added support for making with GTXVT

  * tipclient.prg
    + Added gauge support in WriteFromFile
      (TODO: add it in ReadFromFile )
      (TODO: detect file sizes in downloads)

  * tipclientftp.prg
    + Fixed transfer startup/shutdown sequence

  * tests/tiptest.prg
    + Added gauge for writing files

2004-01-13 22:10 UTC-0300 Luiz Rafael Culik <culikr@brturbo.com>
  * tipclient.prg
    ! Added support for ESMTP Servers and write method enhaced for multiples
      email address reparated by comma
  + base64x.c
    ! functions for base64 password building
  * makefile.bc
  * makefile.bc
    Makefile
    ! makefile updated


2003-12-10 14:32 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * tipclienthttp.prg
    * GetRequest and PostRequest method have been changed into Get()
      and Post().
    * cQuery field is now optional, if not given it defaults
      to URL path+file+query.
    * Post method now accepts a non optional parameter that may be
      a string or a hash.

  * tipencoderqp.prg
  * tipencoderurl.prg
  * tipencoderbase64.prg
    ! IF string to encode is emptu, return immediately.

2003-12-10 02:51 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * tipclienthttp.prg